Bug 447752 - Dell Docking Station
Summary: Dell Docking Station
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.22.5
Platform: unspecified Linux
: NOR crash
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2021-12-31 20:00 UTC by Rob Jardine
Modified: 2022-01-10 09:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rob Jardine 2021-12-31 20:00:49 UTC
Application: plasmashell (5.22.5)

Qt Version: 5.15.3
Frameworks Version: 5.86.0
Operating System: Linux 5.11.0-43-generic x86_64
Windowing System: X11
Drkonqi Version: 5.22.5
Distribution: Feren OS

-- Information about the crash:
- What I was doing when the application crashed: Plugged my Dell XPS 9570 into a Dell docking station via the USB C/Thunderbolt connection. 

I'm using Feren OS 2021.10

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Plasma (plasmashell), signal: Aborted

[New LWP 2966]
[New LWP 2975]
[New LWP 3206]
[New LWP 3280]
[New LWP 3281]
[New LWP 3282]
[New LWP 3329]
[New LWP 3771]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007f51650e3aff in poll () from /lib/x86_64-linux-gnu/libc.so.6
[Current thread is 1 (Thread 0x7f516123f9c0 (LWP 2953))]

Thread 9 (Thread 0x7f510224a700 (LWP 3771)):
#0  0x00007f51643cd376 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f516547859b in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f51670d1b44 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#3  0x00007f51670d1fb9 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#4  0x00007f516547242c in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f51643c6609 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#6  0x00007f51650f0293 in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 8 (Thread 0x7f5103fff700 (LWP 3329)):
#0  0x00007f51643cd376 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f516547859b in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f51670d1b44 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#3  0x00007f51670d1fb9 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#4  0x00007f516547242c in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f51643c6609 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#6  0x00007f51650f0293 in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 7 (Thread 0x7f5149866700 (LWP 3282)):
#0  0x00007f51650e3aff in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f516399436e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f51639944a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f51656b35eb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f516565787b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f5165471292 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f516700c3ba in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#7  0x00007f516547242c in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f51643c6609 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#9  0x00007f51650f0293 in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 6 (Thread 0x7f514a29a700 (LWP 3281)):
#0  0x00007f51650e612b in select () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f515d2d97f1 in ?? () from /lib/x86_64-linux-gnu/libnvidia-glcore.so.495.44
#2  0x00007f515d2d7288 in ?? () from /lib/x86_64-linux-gnu/libnvidia-glcore.so.495.44
#3  0x00007f51643c6609 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f51650f0293 in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 5 (Thread 0x7f514bf19700 (LWP 3280)):
#0  0x00007f51643cd376 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f516547859b in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f51670d1b44 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#3  0x00007f51670d1fb9 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#4  0x00007f516547242c in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f51643c6609 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#6  0x00007f51650f0293 in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 4 (Thread 0x7f51575ae700 (LWP 3206)):
#0  0x00007f5165472950 in QMutex::lock() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#1  0x00007f51656b3cc9 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f5163993da1 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5163994312 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f51639944a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f51656b35eb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f516565787b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f5165471292 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f5166c81549 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#9  0x00007f516547242c in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f51643c6609 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#11 0x00007f51650f0293 in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 3 (Thread 0x7f515f752700 (LWP 2975)):
#0  0x00007f51639938bc in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f516399429b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f51639944a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f51656b35eb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f516565787b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f5165471292 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f5165fe4f4b in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f516547242c in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f51643c6609 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#9  0x00007f51650f0293 in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 2 (Thread 0x7f51603b0700 (LWP 2966)):
#0  0x00007f51650e3aff in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f51677dbc1a in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f51677dd90a in xcb_wait_for_event () from /lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f5160adce88 in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f516547242c in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f51643c6609 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#6  0x00007f51650f0293 in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 1 (Thread 0x7f516123f9c0 (LWP 2953)):
[KCrash Handler]
#4  0x00007f516501418b in raise () from /lib/x86_64-linux-gnu/libc.so.6
#5  0x00007f5164ff3859 in abort () from /lib/x86_64-linux-gnu/libc.so.6
#6  0x00007f5165436bd7 in QMessageLogger::fatal(char const*, ...) const () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f5165435fe3 in qt_assert(char const*, char const*, int) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x0000559a69ae8c9a in ScreenPool::insertScreenMapping (this=0x559a6be43b30, id=3, connector=...) at /tmp/git-sources/plasma-workspace-patching/shell/screenpool.cpp:139
#9  0x0000559a69ae897b in ScreenPool::setPrimaryConnector (this=0x559a6be43b30, primary=...) at /tmp/git-sources/plasma-workspace-patching/shell/screenpool.cpp:115
#10 0x0000559a69abe7dd in ShellCorona::primaryOutputChanged (this=0x559a6be22350) at /tmp/git-sources/plasma-workspace-patching/shell/shellcorona.cpp:739
#11 0x0000559a69adba84 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ShellCorona::*)()>::call(void (ShellCorona::*)(), ShellCorona*, void**) (f=(void (ShellCorona::*)(ShellCorona * const)) 0x559a69abe59e <ShellCorona::primaryOutputChanged()>, o=0x559a6be22350, arg=0x7ffd1c721590) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:152
#12 0x0000559a69ada222 in QtPrivate::FunctionPointer<void (ShellCorona::*)()>::call<QtPrivate::List<>, void>(void (ShellCorona::*)(), ShellCorona*, void**) (f=(void (ShellCorona::*)(ShellCorona * const)) 0x559a69abe59e <ShellCorona::primaryOutputChanged()>, o=0x559a6be22350, arg=0x7ffd1c721590) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:185
#13 0x0000559a69ad73cb in QtPrivate::QSlotObject<void (ShellCorona::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x559a6c2056f0, r=0x559a6be22350, a=0x7ffd1c721590, ret=0x0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:418
#14 0x00007f516568fd9e in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007f5165a2ed26 in QGuiApplication::primaryScreenChanged(QScreen*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#16 0x00007f5160adfd2b in QXcbConnection::createScreen(QXcbVirtualDesktop*, xcb_randr_output_change_t const&, xcb_randr_get_output_info_reply_t*) () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#17 0x00007f5160ae1342 in QXcbConnection::updateScreens(xcb_randr_notify_event_t const*) () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#18 0x00007f5160ab4290 in QXcbConnection::handleXcbEvent(xcb_generic_event_t*) () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#19 0x00007f5160ab4676 in QXcbConnection::processXcbEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#20 0x00007f5160addea7 in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#21 0x00007f516399417d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007f5163994400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007f51639944a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007f51656b35d2 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#25 0x00007f516565787b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007f516565fa34 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#27 0x0000559a69a94f3c in main (argc=1, argv=0x7ffd1c721c08) at /tmp/git-sources/plasma-workspace-patching/shell/main.cpp:254
[Inferior 1 (process 2953) detached]

The reporter indicates this bug may be a duplicate of or related to bug 437637.

Possible duplicates by query: bug 447519, bug 446357, bug 446053, bug 445778, bug 445669.

Reported using DrKonqi
Comment 1 Marco Martin 2022-01-10 09:22:14 UTC
Git commit ecf0cc36936f69830a07937b97807ec0ba4d3f41 by Marco Martin.
Committed on 10/01/2022 at 09:22.
Pushed by mart into branch 'master'.

Don't crash when a screen gets disabled and enabled again

when a screen gets disabled, the containment loses its view, and when gets enabled again,
the process of the old orphaned containment getting a new view causes a plasma crash.
It comes from the wallpaper, which indicates a hierarchy of C++ owned objects
makes the internal one (wallpaper) to not reset correctly its window and have a stray pointer to it.

M  +17   -4    src/scriptengines/qml/plasmoid/containmentinterface.cpp
M  +1    -0    src/scriptengines/qml/plasmoid/containmentinterface.h

https://invent.kde.org/frameworks/plasma-framework/commit/ecf0cc36936f69830a07937b97807ec0ba4d3f41